蠢萌的 Markdown 编辑器。

--- a/my-vue-wechat/index.html
+++ b/my-vue-wechat/index.html
@@ -2,16 +2,57 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>my-vue-wechat</title>
+    <title>蠢萌的 Markdown 编辑器</title>
     <link rel="icon" type="image/x-icon" href="https://res.wx.qq.com/open/zh_CN/htmledition/res/img/icon/common/favicon2168b9.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="http://images2015.cnblogs.com/blog/528573/201609/528573-20160902122329902-1531110925.png">
     <link rel="apple-touch-icon" sizes="114x114" href="http://images2015.cnblogs.com/blog/528573/201609/528573-20160902122334215-1428383567.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta content="yes" name="apple-mobile-web-app-capable" >
     <meta content="black" name="apple-mobile-web-app-status-bar-style" >
+    <script src="https://unpkg.com/marked@0.3.6"></script>
+    <script src="https://unpkg.com/lodash@4.16.0"></script>
+    <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
+    <style type="text/css">
+      html, body, #editor {
+        margin:0;
+        height: 100%;
+        font-family: "Helvetica Neue", Aria, sans-serif;
+        color: #333;
+      }
+
+      #editor {
+        display: flex;
+      }
+
+      textarea, #editor div {
+        width: 45%;
+        height: 100%;
+        padding: 0 20px;
+      }
+
+      textarea {
+        border: none;
+        border-right: 1px solid #ccc;
+        resize: none;
+        outline: none;
+        background-color: #f6f6f6;
+        font-size: 14px;
+        font-family: "Monaco", courier, monospace;
+        padding: 20px;
+      }
+
+      code {
+        color: #f66;
+      }
+
+
+    </style>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="editor">
+      <textarea :value="input" @input="update"></textarea>
+      <div v-html="complieMarkdown">123</div>
+    </div>
+    <script src="./src/main.js"></script>
   </body>
 </html>
